manifests/kiali-extension/prod-eu-central-1/http-route-kiali.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: kiali
  namespace: kiali
spec:
  parentRefs:
    - name: istio
      namespace: istio-system
      sectionName: https
  hostnames:
    - kiali.prod.eu-central-1.localhost
  rules:
    - backendRefs:
        - name: kiali
          port: 20001
